# cpp-boilerplate

./: .gitignore  .travis.yml  CMakeLists.txt  callgrind.out.20180  cpplintResult.txt  readme.md  valgrind_bugs_free_output.txt  valgrind_bugs_output.txt
app/: AnalogSensor.cpp  CMakeLists.txt  ClassGrade.cpp  PIDController.cpp  average_numbers.cpp  class_grade_avg.cpp  concatenate_strings.cpp  count_words.cpp  course_grade.cpp  main.cpp  printPosition.cpp
docs/: Doxyfile
documentation/: annotated.html  annotated_dup.js  classes.html  dir_0a2596babf02303f3e57be59605fa14a.html  dir_111231225b5d06f153e43ec1407fb84d.html  dir_21d468c2862beabbca7627eb8efec747.html  dir_285d76efa90f0297c7dd3d5d1d843bb3.html  dir_30731cdf374b4cbe790a11488cdd839d.html  dir_37b1c80aa862a33809e5783e6053f16e.html  dir_3abe99f84b52a825b1c8e7d53ca3693e.html  dir_5332312cbec2ccbfc6ec49edb7115bde.html  dir_620273fa2b312dd81c82ac28cf190b96.html  dir_6748456fc645c8937a94730d3b2df10d.html  dir_6caa928f2ff32e3046d458a6db16d374.html  dir_715313e4b59522d3df9e9f9cbbba9bdb.html  dir_75c4bf9eecdf24d2e72e2b633b88a612.html  dir_76705f2848539279453c435f27d6e67e.html  dir_7689a171237d67cdbaf259b321fee520.html  dir_782585d03eb4e7c30c6dfefa23d71bed.html  dir_87e4b903fff9beab645922601d087bc6.html  dir_885cc87fac2d91e269af0a5a959fa5f6.html  dir_8cc5d383ca0f3432566843bb79c8274f.html  dir_9246a5f01da3250c06e63898b024189f.html  dir_98211e08223522552eea2785efb8c725.html  dir_9efea0fe91975a299b38d6af58bbef70.html  files.html  files_dup.js  (+25 more)
test/: CMakeLists.txt  PIDController_Test.cpp  main.cpp  mock_test.cpp  test.cpp
(+151 files in other folders)
